--- a/worksheets/gwas.rmd
+++ b/worksheets/gwas.rmd
@@ -2,7 +2,8 @@
 title: "Genome wide association studies"
 author: Gibran Hemani
 output: 
-  pdf_document:
+  html_document:
+    theme: united
     highlight: tango
 ---
 
