--- a/worksheets/gwas.rmd
+++ b/worksheets/gwas.rmd
@@ -2,8 +2,7 @@
 title: "Genome wide association studies"
 author: Gibran Hemani
 output: 
-  html_document:
-    theme: united
+  pdf_document:
     highlight: tango
 ---
 
@@ -15,11 +14,11 @@ This worksheet will take you through:
 4. The consequences of population stratification
 5. Finding out about our GWAS hits
 
-We'll be using plink software, and also the genotype data that you cleaned in the "Genetic data" practical (`../../data/genetic/geno_qc`).
+We'll be using plink software, and also the genotype data that you cleaned in the "Genetic data" practical (`data/genetic/geno_qc`).
 
 We'll be storing results in the `results/gwas` folder. Navigate there:
 
-```
+```bash
 cd results/gwas
 ```
 
@@ -33,7 +32,7 @@ In the phenotype file (`../../data/genetic/phen.txt`) we have phenotypic informa
 - CRP (C reactive protein)
 - HT (hypertension)
 
-```
+```bash
 head ../../data/genetic/phen.txt
 ```
 
@@ -49,7 +48,7 @@ id5 id5 26.9278590031599 77.8172291593599 151.038730334376 3.38852808547912 2
 
 And we have a list of SNPs that are in our data, e.g.
 
-```
+```bash
 head ../../data/genetic/geno_qc.bim
 ```
 
@@ -98,7 +97,7 @@ id146 26.5
 
 Our question is whether there is an association between the genotype values and the trait (BMI) values for this SNP. We can calculate the association for this SNP using plink:
 
-```
+```bash
 ../../software/plink_mac \
 --bfile ../../data/genetic/geno_qc \
 --pheno ../../data/genetic/phen.txt \
@@ -139,7 +138,7 @@ The SNP is associated with BMI with a slope of `-0.03543`, but with a large stan
 
 We have seen what is happening in an association test between a SNP and a trait. We can just as easily perform this same operation for every SNP against the same trait. In plink it is simply done like this:
 
-```
+```bash
 ../../software/plink_mac \
 --bfile ../../data/genetic/geno_qc \
 --pheno ../../data/genetic/phen.txt \
@@ -263,13 +262,13 @@ The value of 1.09 is a cause for concern here - what could be causing this?
 
 So far our GWAS did not include covariates. We have a covariates file, located here (run this in the Terminal, not in R):
 
-```
+```bash
 less ../../data/genetic/covs.txt
 ```
 
 It contains principal components 1-10, sex, age and smoking status. To perform linear regression of SNP against BMI, adjusting for these covariates, we can use the following plink command:
 
-```
+```bash
 ../../software/plink_mac \
 --bfile ../../data/genetic/geno_qc \
 --pheno ../../data/genetic/phen.txt \
@@ -314,7 +313,7 @@ PC10     8237      2.282       0.4662       0.6411
 
 (only the relevant columns shown here). We should perform the GWAS again, making sure to adjust for PCs and covariates. The code to do this is similar to above but without the `--snp` flag,
 
-```
+```bash
 ../../software/plink_mac \
 --bfile ../../data/genetic/geno_qc \
 --pheno ../../data/genetic/phen.txt \
@@ -356,6 +355,12 @@ The lambda estimate is now much lower - 1.03. Still not perfect but this is much
 
 ### Finding out about our GWAS hits
 
+How many SNPs are below the threshold of `5e-8`?
+
+```{r eval=FALSE}
+table(bmi_adj$P < 5e-8)
+```
+
 Which is our top SNP in this GWAS? In R:
 
 ```{r eval=FALSE}
@@ -367,3 +372,13 @@ We can use online tools to find out about any particular SNP. There are many to 
 [http://genome.ucsc.edu/cgi-bin/hgGateway](http://genome.ucsc.edu/cgi-bin/hgGateway)
 
 Put an rs ID into the search. When the result comes up, try zooming out a few times. Which is the closest gene? Click on the gene and find out more information about it.
+
+
+## Questions
+
+1. Load the CRP GWAS results into R.
+    - How many SNPs are "significant" for the CRP GWAS?
+    - Which SNP has the smallest p-value?
+    - Which gene is closest to this SNP?
+
+2. Repeat question 1, but for the hypertension GWAS.
