--- a/worksheets_win/gwas.rmd
+++ b/worksheets_win/gwas.rmd
@@ -2,7 +2,7 @@
 title: "Genome wide association studies"
 author: Gibran Hemani
 output: 
-  word_document:
+  html_document:
     theme: united
     highlight: tango
 ---
@@ -383,3 +383,4 @@ Put an rs ID into the search. When the result comes up, try zooming out a few ti
     - Which gene is closest to this SNP?
 
 2. Repeat question 1, but for the hypertension GWAS.
+
